# netflix-lakehouse-analytics-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: netflix_gold_content_overview.csv  netflix_gold_genre_analysis.csv  netflix_gold_geographic_distribution.csv  netflix_gold_quality_scorecard.csv  netflix_gold_rating_distribution.csv  netflix_gold_temporal_trends.csv  netflix_gold_top_producers.csv
docs/: architecture.md  data_dictionary.md  glue_workflow.md  setup_guide.md
scripts/: adhoc_pandas_tansformation.py
streamlit_app/: Home.py  __init__.py  config.py
streamlit_app/pages/: 1_Content_Overview.py  2_Genre_Analysis.py  3_Geographic_Insights.py  4_Rating_Analysis.py  5_Temporal_Trends.py  6_Quality_Scorecard.py  7_Top_Producers.py
streamlit_app/utils/: aws_connector.py  data_loader.py
