[project]
name = "netflix-lakehouse-analytics-pipeline"
version = "1.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awswrangler>=3.15.0",
    "boto3>=1.42.42",
    "freeze",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
